@@ -10,6 +10,7 @@ to version.
 Piotr Klaban's php-cgiwrap patch, with minor changes.
 	<LI>Added options for php support. --with-php-interpreter and --with-php-cgiwrap
 	<LI>Rewrote the path translated support. Is it finally correct?
+	<LI>Patch from san@cobalt.rmnet.it to use REDIRECT_URL if available for SCRIPT_NAME.
 </UL>
 
 <P><H3>New in version 3.7.1:</H3><UL>
