@@ -13,6 +13,8 @@
      * Added   options   for   php  support.  --with-php-interpreter  and
        --with-php-cgiwrap
      * Rewrote the path translated support. Is it finally correct?
+     * Patch  from  san@cobalt.rmnet.it  to use REDIRECT_URL if available
+       for SCRIPT_NAME.
 
   New in version 3.7.1:
 
